--- a/GUI/src/main/java/MainWindowForm.form
+++ b/GUI/src/main/java/MainWindowForm.form
@@ -718,7 +718,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="4a8b6" binding="loginPagePanel" layout-manager="GridLayoutManager" row-count="7" column-count="10" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="4a8b6" binding="loginPagePanel" layout-manager="GridLayoutManager" row-count="7" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Log in"/>
@@ -728,7 +728,7 @@
             <children>
               <component id="3a1d6" class="javax.swing.JTextField" binding="loginLoginPageTextField">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="2" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -743,7 +743,7 @@
               </vspacer>
               <hspacer id="6594f">
                 <constraints>
-                  <grid row="2" column="9" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
               <hspacer id="c8025">
@@ -753,7 +753,7 @@
               </hspacer>
               <component id="254d0" class="javax.swing.JLabel" binding="loginLoginPageLabel">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Email or phone number"/>
@@ -761,7 +761,7 @@
               </component>
               <component id="2807a" class="javax.swing.JLabel" binding="passwordLoginPageLabel">
                 <constraints>
-                  <grid row="3" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Password"/>
@@ -769,7 +769,7 @@
               </component>
               <component id="8c852" class="javax.swing.JPasswordField" binding="passwordLoginPagePasswordField">
                 <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                  <grid row="4" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
@@ -777,11 +777,6 @@
                   <text value=""/>
                 </properties>
               </component>
-              <vspacer id="49d2f">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
               <component id="d49ff" class="javax.swing.JButton" binding="logInLoginPageButton">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -792,7 +787,7 @@
               </component>
               <component id="e9978" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="5" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Not registered yet?"/>
@@ -805,7 +800,7 @@
               </hspacer>
               <component id="7b0b9" class="javax.swing.JButton" binding="registerLoginPageButton">
                 <constraints>
-                  <grid row="5" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Create new account"/>
@@ -813,7 +808,9 @@
               </component>
               <component id="1aac3" class="javax.swing.JLabel" binding="PWPostLogo" custom-create="true">
                 <constraints>
-                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="1" use-parent-layout="false">
+                    <minimum-size width="10" height="10"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <text value=" "/>
